# ML_basics

./: CMakeLists.txt  CrossoverOperator.cpp  CrossoverOperator.h  MutationOperator.h  NumericFunction.cpp  NumericFunction.h  SelectionOperator.cpp  SelectionOperator.h  Solution.cpp  Solution.h  function.cpp  function.h  main.cpp  main.h  optimization_function.cpp  optimization_function.h
SantaFe/: .gitignore  AbstractNode.cpp  AbstractNode.h  Ant.cpp  Ant.h  CMakeLists.txt  DoubleFunction.cpp  DoubleFunction.h  DrawTrail.cpp  DrawTrail.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  IfFoodAheadNode.cpp  IfFoodAheadNode.h  MoveNode.cpp  MoveNode.h  Population.cpp  Prog2Node.cpp  Prog2Node.h  Prog3Node.cpp  Prog3Node.h  TreeConstructor.cpp  TreeConstructor.h  TreeCrossover.cpp  TreeCrossover.h  TreeFunction.cpp  TreeFunction.h  TreeMutation.cpp  TreeMutation.h  TreePopulation.cpp  TreePopulation.h  TreeSelection.cpp  TreeSelection.h  TurnLeftNode.cpp  TurnLeftNode.h  TurnRightNode.cpp  TurnRightNode.h  main.cpp
SantaFe/graphs/: Makefile
genetic_algorithm/: ArithmeticCrossover.cpp  ArithmeticCrossover.h  BLX_alpha.cpp  BLX_alpha.h  CMakeLists.txt  CrossoverOperator.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  MutationOperator.cpp  MutationOperator.h  NormalMutation.cpp  NormalMutation.h  RouletteSelection.cpp  RouletteSelection.h  SelectionOperator.h  SimpleCrossover.cpp  SimpleCrossover.h  Solution.cpp  Solution.h  TournamentSelection.cpp  TournamentSelection.h  UniformMutation.cpp  UniformMutation.h  main.cpp  results.txt
genetic_algorithm/SantaFe/: AbstractNode.h  Ant.h  CMakeLists.txt  MoveNode.cpp  MoveNode.h  Population.h  Prog2Node.cpp  Prog2Node.h  Prog3Node.cpp  TreeConstructor.cpp  TreeCrossover.h  TreeFunction.cpp  TreeFunction.h  TreePopulation.cpp  TreeSelection.cpp  TreeSelection.h  TreeSolution.cpp  TreeSolution.h  TurnLeftNode.cpp  main.cpp
genetic_algorithm/TransferFunction/: CMakeLists.txt  NumericSolution.cpp  NumericSolution.h  TF_optimization.cpp  TF_optimization.h  main.cpp  results.txt  tf_file.txt
genetic_algorithm/TransferFunction/Crossover/: ArithmeticCrossover.cpp  ArithmeticCrossover.h  BLX_alpha.cpp  BLX_alpha.h  SimpleCrossover.cpp  SimpleCrossover.h
genetic_algorithm/TransferFunction/Mutation/: NormalMutation.cpp  NormalMutation.h  UniformMutation.cpp  UniformMutation.h
genetic_algorithm/TransferFunction/Selection/: RouletteSelection.cpp  RouletteSelection.h  TournamentSelection.cpp  TournamentSelection.h
simulated_annealing/: CMakeLists.txt  CoolingScheme.h  EasomFunction.h  EggholderFunction.cpp  EggholderFunction.h  GeometricScheme.cpp  GeometricScheme.h  HimmelblauFunction.cpp  HimmelblauFunction.h  LinearScheme.cpp  LinearScheme.h  RastriginFunction.cpp  RastriginFunction.h  RosenbrockFunction.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  TF_optimization.cpp  TF_optimization.h  function.h  main.cpp
steepest_descent/: CMakeLists.txt  main.cpp  main.h  numeric_optimization.cpp  numeric_optimization.h  optimization_function.h  quadratic_function.cpp  quadratic_function.h
test_functions/: EasomFunction.cpp  EasomFunction.h  EggholderFunction.h  HimmelblauFunction.cpp  HimmelblauFunction.h  RastriginFunction.cpp  RastriginFunction.h  RosenbrockFunction.cpp  RosenbrockFunction.h
